codewars: added mostFrequentUsedWordInATextRetry : codewars won't accept answer